[gd_scene load_steps=11 format=3 uid="uid://b1q5k4e7tlapt"]

[ext_resource type="PackedScene" uid="uid://hwiqrwp4js82" path="res://entities/vehicles/Mustang.glb" id="1_4pkt6"]
[ext_resource type="Script" uid="uid://cvo65csr1wr4i" path="res://entities/vehicles/car.gd" id="1_p0g41"]
[ext_resource type="PackedScene" uid="uid://c7xiuy458qr7j" path="res://entities/vehicles/wheels/wheel.tscn" id="2_s13lj"]
[ext_resource type="PackedScene" uid="uid://dlmaglk55ulnr" path="res://components/location_indicator.tscn" id="3_3gd6c"]
[ext_resource type="PackedScene" uid="uid://xla4kud3gc0l" path="res://entities/vehicles/dust_bubble_particles.tscn" id="4_vjqgi"]
[ext_resource type="Script" uid="uid://cp6o1ad4r3qu2" path="res://entities/vehicles/player_car_controller.gd" id="6_ngpi6"]
[ext_resource type="PackedScene" uid="uid://cjbkrjimolek1" path="res://components/health_component/health_component.tscn" id="7_dpkqx"]
[ext_resource type="PackedScene" uid="uid://m7xv0r8c8a2t" path="res://components/follow_camera/follow_camera.tscn" id="8_up0rm"]
[ext_resource type="PackedScene" uid="uid://ct1v0jtqwvicy" path="res://ui/race_car_hud.tscn" id="9_iqqjr"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_qxcdr"]
points = PackedVector3Array(-1.68723, 0.0407557, -0.669572, -1.68723, 0.0407557, 0.669441, -2.15283, 0.128665, -0.000131071, -2.08106, 0.128665, -0.608881, -2.04114, 0.50818, -0.608881, -1.97072, 0.852531, -0.608881, -1.50916, 0.859586, -0.669572, -0.864599, -7.59149e-05, -0.669572, -1.50916, 0.859586, 0.669441, -1.97072, 0.852531, 0.60875, -2.04114, 0.50818, 0.60875, -2.08106, 0.128665, 0.60875, -0.864599, -7.59149e-05, 0.669441, -2.11335, 0.50818, -0.000131071, -2.04293, 0.852531, -0.000131071, -0.792383, 1.16056, -0.542553, -0.0383744, 1.17583, -0.542553, 0.948878, 0.843277, -0.669572, 0.384157, -0.00424005, -0.669572, -0.0383744, 1.17583, 0.542422, -0.792383, 1.16056, 0.542422, 0.948878, 0.843277, 0.669441, 0.384157, -0.00424005, 0.669441, 0.254976, 1.1564, -0.542553, 1.86885, 0.749584, -0.669572, 1.05518, -0.00585943, -0.669572, 0.254976, 1.1564, 0.542422, 1.86885, 0.749584, 0.669441, 1.05518, -0.00585943, 0.669441, 2.29721, 0.614828, -0.000131071, 2.26222, 0.614828, -0.555661, 2.39455, 0.421196, -0.555661, 1.89038, 0.601988, -0.669572, 1.93344, 0.0105658, -0.669572, 1.89038, 0.601988, 0.669441, 2.39455, 0.421196, 0.55553, 2.26222, 0.614828, 0.55553, 1.93344, 0.0105658, 0.669441, 2.42953, 0.421196, -0.000131071, 2.36853, 0.126352, -0.555661, 2.40352, 0.126352, -0.000131071, 2.36853, 0.126352, 0.55553)

[node name="Mustang" type="VehicleBody3D"]
mass = 300.0
script = ExtResource("1_p0g41")

[node name="Mustang" parent="." instance=ExtResource("1_4pkt6")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.672396, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.92762e-09, -0.133905, 0.135608)
shape = SubResource("ConvexPolygonShape3D_qxcdr")

[node name="FrontRight" parent="." instance=ExtResource("2_s13lj")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.679082, -0.143664, -1.47029)
use_as_steering = true

[node name="FrontLeft" parent="." instance=ExtResource("2_s13lj")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.675678, -0.143664, -1.47029)
use_as_steering = true

[node name="RearRight" parent="." instance=ExtResource("2_s13lj")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.679082, -0.143664, 1.32015)
use_as_traction = true

[node name="RearLeft" parent="." instance=ExtResource("2_s13lj")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.675678, -0.143664, 1.32015)
use_as_traction = true

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(0.838671, -0.140963, 0.526081, 0, 0.965926, 0.258819, -0.544639, -0.217064, 0.810094, 0, 1.07036, 0.45327)
spring_length = 10.0

[node name="CameraDesiredPos" parent="SpringArm3D" instance=ExtResource("3_3gd6c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0653203, 10.0455)

[node name="UprightVehicleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DustBubbleParticles" parent="." instance=ExtResource("4_vjqgi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.252239, 1.64533)
visibility_aabb = AABB(-4, -4.30762, -4, 8, 8, 8)

[node name="PlayerCarController" type="Node" parent="."]
script = ExtResource("6_ngpi6")

[node name="HealthComponent" parent="." instance=ExtResource("7_dpkqx")]

[node name="FollowCamera" parent="." node_paths=PackedStringArray("camera_guide", "look_at_target") instance=ExtResource("8_up0rm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.59791, 10.1501)
camera_guide = NodePath("../SpringArm3D/CameraDesiredPos")
look_at_target = NodePath("..")

[node name="RaceCarHud" parent="." instance=ExtResource("9_iqqjr")]

[node name="IsGroundedRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0121025, 0)

[node name="BoostCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="RocketCooldownTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AirTrickDelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CarReverseTimer" type="Timer" parent="."]
one_shot = true
